<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C000000"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ConverterActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_from" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp">

        <Spinner
            android:id="@+id/currencyInSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dropDownWidth="300dp"
            android:spinnerMode="dialog" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert_to" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp">

        <Spinner
            android:id="@+id/currencyOutSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:dropDownWidth="300dp"
            android:spinnerMode="dialog" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextColor="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amountEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_string"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textCursorDrawable="@null" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/convertButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/convert_button"
        app:backgroundTint="#000000" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text="@string/res"
            android:textAppearance="?attr/textAppearanceBody1"/>
        <TextView
            android:id="@+id/resultTextView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center"
            android:text=""
            android:textAppearance="?attr/textAppearanceBody1" />
    </LinearLayout>

</LinearLayout>